# MyRL

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_agent.py  test_rl.py
MyRL/: config.py
MyRL/agents_src/: double_qlearning.py  dynaq.py  qlearning.py
app/: __init__.py  agents.py  config.py  logger.py  rl.py
app/agents/: base.py  qlearning.py  sarsa.py
app/agents_src/: base.py  double_qlearning.py  qlearning.py  sarsa.py
app/utils/: reporting.py
