[tool.poetry]
name = "myrl"
version = "0.1.0"
description = ""
authors = ["YANN BERTHELOT <yann.berthelot@capgemini.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.21.4"
gym = "^0.21.0"
parameterized = "^0.8.1"
tqdm = "^4.62.3"
pandas = "^1.3.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
